# staffSystemLibrary

./: README.md
staffSystem/: CMakeLists.txt
staffSystem/src/: boss.cpp  boss.h  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  work.h  workManger.cpp  workManger.h
